...
                navigateToDetail = navigateToDetail
            )
        } else {
            EmptyList(
                Warning = stringResource(R.string.empty_data),
                modifier = Modifier
                    .testTag("emptyList")
            )
        }
    }
}

@OptIn(ExperimentalFoundationApi::class)
...
            bottom = 16.dp,
            top = contentPaddingTop
        ),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier
            .background(Color(0xffffc107))
            .testTag("lazy_list")
    ) {
        items(listArtist, key = { it.id }) { item ->
            ArtistItem(
                id = item.id,
                name = item.name,
                genre = item.genre,
...
