...
            contentDescription = null,
            tint = if (!isFavorite) Color.Black else Color.Red,
            modifier = Modifier
                .align(Alignment.TopEnd)
                .padding(8.dp)
                .size(24.dp)
                .testTag("item_favorite_button")
                .clickable { onFavoriteIconClicked(id, !isFavorite) }
        )
//        Divider(modifier = Modifier.padding(horizontal = 16.dp, vertical = 16.dp))
    }
    Divider(modifier = Modifier.padding(horizontal = 16.dp, vertical = 16.dp))
}
...
